--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,12 +4,45 @@
   height: 95%;
 }
 
+.app-logo {
+  margin-top: 70px;
+  height: 150px;
+  width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h2.title {
+  text-align: center;
+  font-size: 47px;
+  margin-top: 5px;
+  font-family: "Arial", sans-serif;
+}
+
+h3.caption {
+  text-align: center;
+  font-size: 20px;
+  margin-top: -30px;
+  margin-bottom: 40px;
+  font-family: "Arial", sans-serif;
+  font-style: italic;
+}
+
+.countryCaption {
+  text-align: center;
+  font-size: 20px;
+}
+
 .country-item {
   box-shadow: 2px 2px 4px 0 #ccc;
   box-sizing: border-box;
   display: inline-block;
   margin: 0 0 1.5em auto; 
   padding: 1em;
+  width: 100%;
+
+
 }
 
 .country-item img {
@@ -26,11 +59,13 @@
 
 input {
   display: block;
-  font-size: 30px;
+  font-size: 22px;
   height: 50px;
   margin: 0 auto;
   text-align: center;
   width: 50%;
+  margin-top: -20px;
+  margin-bottom: 60px;
 }
 
 @media only screen and (min-width: 400px) {
