--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,34 @@
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /*Set the navbar to fixed position*/
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+  /* float: right; */
+  display: inline-block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
 body {
   margin: 0;
   padding: 0;
