--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,14 @@
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(0, 137, 70);
+  opacity: .9;
   position: fixed; /*Set the navbar to fixed position*/
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+}
+
+body {
+  background-color: rgb(216, 245, 255) ;
 }
 
 /* Links inside the navbar */
@@ -11,9 +16,10 @@
   /* float: right; */
   display: inline-block;
   color: #f2f2f2;
-  text-align: center;
+  text-align: right;
   padding: 14px 16px;
   text-decoration: none;
+  
 }
 
 /* Change background on mouse-over */
