--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,15 @@
+.app-header{
+  align-content: center;
+  align-items: center;
+}
 .app {
-  margin: 20px auto;
+  margin: 30px auto;
   width: 90%;
   height: 95%;
 }
 
 .app-logo {
-  margin-top: 70px;
+  margin-top: 90px;
   height: 150px;
   width: 150px;
   display: block;
@@ -13,17 +17,18 @@
   margin-right: auto;
 }
 
+
 h2.title {
   text-align: center;
   font-size: 47px;
-  margin-top: 5px;
+  margin-top: 25px;
   font-family: "Arial", sans-serif;
 }
 
 h3.caption {
   text-align: center;
   font-size: 20px;
-  margin-top: -30px;
+  margin-top: -10px;
   margin-bottom: 40px;
   font-family: "Arial", sans-serif;
   font-style: italic;
@@ -44,7 +49,7 @@ h3.caption {
   box-shadow: 2px 2px 4px 0 #ccc;
   box-sizing: border-box;
   display: inline-block;
-  margin: 0 0 1.5em auto; 
+  margin: 0 0 1.5em auto;
   padding: 1em;
   width: 100%;
 
@@ -68,8 +73,9 @@ input {
   font-size: 22px;
   height: 50px;
   margin: 0 auto;
+  align-self: center;
   text-align: center;
-  width: 50%;
+  width: 100%;
   margin-top: -20px;
   margin-bottom: 60px;
 }
