--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,10 @@
   overflow: hidden;
   background-color: rgb(0, 137, 70);
   opacity: .9;
-  position: fixed; /*Set the navbar to fixed position*/
+  position: fixed !important; /*Set the navbar to fixed position*/
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  align-content: flex-start;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
   text-align: right;
   padding: 14px 16px;
   text-decoration: none;
-  
+
 }
 
 /* Change background on mouse-over */
